--- a/blocklib/helpers/CMakeLists.txt
+++ b/blocklib/helpers/CMakeLists.txt
@@ -1,11 +1,7 @@
 # setup header only library
 add_library(gr-helpers INTERFACE)
 
-set(HELPERS_HEADERS
-    helper_blocks.hpp
-)
-
 target_include_directories(gr-helpers INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> $<INSTALL_INTERFACE:include/>)
 
 target_link_libraries(gr-helpers INTERFACE graph-prototype)
-set_target_properties(gr-helpers PROPERTIES PUBLIC_HEADER "${HELPERS_HEADERS}")
+set_target_properties(gr-helpers PROPERTIES PUBLIC_HEADER helper_blocks.hpp)
