--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,13 +87,11 @@ jobs:
 
       - name: Install picoscope libraries
         run: |
-          sudo apt-get update
-          sudo apt-get --yes install gnupg2 apt-utils udev libusb-1.0-0-dev
           # https://www.picotech.com/downloads/linux
-          wget -qO - https://labs.picotech.com/Release.gpg.key | sudo apt-key add -
-          sudo echo "deb https://labs.picotech.com/rc/picoscope7/debian/ picoscope main" > /etc/apt/sources.list.d/picoscope7.list
-          sudo apt-get update
-          sudo apt-get --yes install libps3000a libps4000a libps5000a libps6000 libps6000a || true # ignore udev errors in post install because of udev in container
+          wget -O - https://labs.picotech.com/Release.gpg.key|sudo apt-key add -
+          sudo add-apt-repository 'dev https://labs.picotech.com/rc/picoscope7/debian/ picoscope main'
+          sudo apt update
+          sudo apt install -y udev libusb-1.0-0-dev libps3000a libps4000a libps5000a libps6000 libps6000a || true # ignore udev errors in post install because of udev in container
 
       - name: Configure CMake
         if: matrix.configurations.compiler != 'emscripten'
