--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
         run: |
           # https://www.picotech.com/downloads/linux
           wget -O - https://labs.picotech.com/Release.gpg.key|sudo apt-key add -
-          sudo add-apt-repository 'dev https://labs.picotech.com/rc/picoscope7/debian/ picoscope main'
+          sudo add-apt-repository 'deb https://labs.picotech.com/rc/picoscope7/debian/ picoscope main'
           sudo apt update
           sudo apt install -y udev libusb-1.0-0-dev libps3000a libps4000a libps5000a libps6000 libps6000a || true # ignore udev errors in post install because of udev in container
 
