--- a/blocklib/digitizers/CMakeLists.txt
+++ b/blocklib/digitizers/CMakeLists.txt
@@ -6,6 +6,6 @@ target_include_directories(gr-digitizers INTERFACE $<BUILD_INTERFACE:${CMAKE_CUR
 target_link_libraries(gr-digitizers INTERFACE gr-digitizers-options gr-helpers graph-prototype)
 set_target_properties(gr-digitizers PROPERTIES PUBLIC_HEADER block_scaling_offset.hpp)
 
-if (ENABLE_TESTING)
+if (ENABLE_GR_DIGITIZERS_TESTING)
     add_subdirectory(test)
 endif ()
