--- a/blocklib/picoscope/CMakeLists.txt
+++ b/blocklib/picoscope/CMakeLists.txt
@@ -8,7 +8,7 @@ target_include_directories(ps4000a INTERFACE ${PICOSCOPE_PREFIX}/include/libps40
 add_library(fair-picoscope INTERFACE)
 target_include_directories(fair-picoscope INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> $<INSTALL_INTERFACE:include/>)
 
-target_link_libraries(fair-picoscope INTERFACE ps4000a gr-digitizers-options graph-prototype refl-cpp fmt)
+target_link_libraries(fair-picoscope INTERFACE ps4000a gr-digitizers-options gnuradio-core refl-cpp fmt)
 set_target_properties(gr-digitizers PROPERTIES PUBLIC_HEADER "picoscope.hpp;picoscope4000a.hpp")
 
 if (ENABLE_GR_DIGITIZERS_TESTING)
