--- a/blocklib/picoscope/test/CMakeLists.txt
+++ b/blocklib/picoscope/test/CMakeLists.txt
@@ -7,4 +7,4 @@ function(add_ut_test_tool TEST_NAME)
     target_link_libraries(${TEST_NAME} PRIVATE gnuradio-core fair-picoscope fair-helpers ut)
 endfunction()
 
-add_ut_test_tool(qa_picoscope4000a)
+add_ut_test_tool(qa_Picoscope4000a)
