--- a/blocklib/CMakeLists.txt
+++ b/blocklib/CMakeLists.txt
@@ -4,3 +4,7 @@ add_subdirectory(digitizers)
 if (ENABLE_PICOSCOPE)
     add_subdirectory(picoscope)
 endif ()
+
+if (ENABLE_TIMING)
+    add_subdirectory(timing)
+endif ()
