Update to latest graph-prototype, enable C++23

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,7 @@ sonar.organization=fair-acc
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=graph-prototype
 #sonar.projectVersion=1.0
+sonar.cfamily.cpp23.enabled=true
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
