--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,60 +21,64 @@ FetchContent_Declare(
     GIT_TAG bf8388f61103571dee3061a4ef23292a320d9dbf # head as of 2023-08-21
 )
 
-FetchContent_Declare( # used for examples and utilities, not for actual blocks
-   cli11_proj
-   QUIET
-   GIT_REPOSITORY https://github.com/CLIUtils/CLI11.git
-   GIT_TAG v2.3.2
-   SOURCE_DIR     cli11_proj
-)
+if (EMSCRIPTEN)
+    FetchContent_MakeAvailable(graph-prototype ut)
+else ()
+    FetchContent_Declare( # used for examples and utilities, not for actual blocks
+       cli11_proj
+       QUIET
+       GIT_REPOSITORY https://github.com/CLIUtils/CLI11.git
+       GIT_TAG v2.3.2
+       SOURCE_DIR     cli11_proj
+    )
 
-FetchContent_Declare(
-        imgui
-        GIT_REPOSITORY  https://github.com/ocornut/imgui.git
-        GIT_TAG         v1.88
-)
+    FetchContent_Declare(
+            imgui
+            GIT_REPOSITORY  https://github.com/ocornut/imgui.git
+            GIT_TAG         v1.88
+    )
 
-# Enables 32 bit vertex indices for ImGui
-add_compile_definitions("ImDrawIdx=unsigned int")
+    # Enables 32 bit vertex indices for ImGui
+    add_compile_definitions("ImDrawIdx=unsigned int")
 
-FetchContent_Declare(
-        implot
-        GIT_REPOSITORY  https://github.com/epezent/implot.git
-        GIT_TAG         18758e237e8906a97ddf42de1e75793526f30ce9 #latest 2023-04-19
-)
-FetchContent_MakeAvailable(imgui implot graph-prototype ut cli11_proj)
+    FetchContent_Declare(
+            implot
+            GIT_REPOSITORY  https://github.com/epezent/implot.git
+            GIT_TAG         18758e237e8906a97ddf42de1e75793526f30ce9 #latest 2023-04-19
+    )
+    FetchContent_MakeAvailable(imgui implot graph-prototype ut cli11_proj)
 
-find_package(SDL2 REQUIRED)
-find_package(OpenGL REQUIRED COMPONENTS OpenGL)
+    find_package(SDL2 REQUIRED)
+    find_package(OpenGL REQUIRED COMPONENTS OpenGL)
 
-# imgui and implot are not CMake Projects, so we have to define their targets manually here
-add_library(imgui
-    OBJECT
-        ${imgui_SOURCE_DIR}/imgui_demo.cpp
-        ${imgui_SOURCE_DIR}/imgui_draw.cpp
-        ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
-        ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl.cpp
-        ${imgui_SOURCE_DIR}/imgui_tables.cpp
-        ${imgui_SOURCE_DIR}/imgui_widgets.cpp
-        ${imgui_SOURCE_DIR}/imgui.cpp
-        ${imgui_SOURCE_DIR}/misc/cpp/imgui_stdlib.cpp
-)
-target_link_libraries(imgui PUBLIC SDL2::SDL2 OpenGL::GL)
-target_include_directories(imgui BEFORE
-    PUBLIC
-        ${imgui_SOURCE_DIR}
-        ${imgui_SOURCE_DIR}/backends
-)
+    # imgui and implot are not CMake Projects, so we have to define their targets manually here
+    add_library(imgui
+        OBJECT
+            ${imgui_SOURCE_DIR}/imgui_demo.cpp
+            ${imgui_SOURCE_DIR}/imgui_draw.cpp
+            ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
+            ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl.cpp
+            ${imgui_SOURCE_DIR}/imgui_tables.cpp
+            ${imgui_SOURCE_DIR}/imgui_widgets.cpp
+            ${imgui_SOURCE_DIR}/imgui.cpp
+            ${imgui_SOURCE_DIR}/misc/cpp/imgui_stdlib.cpp
+    )
+    target_link_libraries(imgui PUBLIC SDL2::SDL2 OpenGL::GL)
+    target_include_directories(imgui BEFORE
+        PUBLIC
+            ${imgui_SOURCE_DIR}
+            ${imgui_SOURCE_DIR}/backends
+    )
 
-add_library(implot
-    OBJECT ${implot_SOURCE_DIR}/implot_demo.cpp ${implot_SOURCE_DIR}/implot_items.cpp ${implot_SOURCE_DIR}/implot.cpp
-)
-target_include_directories(implot BEFORE
-    PUBLIC
-        ${implot_SOURCE_DIR}
-)
-target_link_libraries(implot PUBLIC imgui)
+    add_library(implot
+        OBJECT ${implot_SOURCE_DIR}/implot_demo.cpp ${implot_SOURCE_DIR}/implot_items.cpp ${implot_SOURCE_DIR}/implot.cpp
+    )
+    target_include_directories(implot BEFORE
+        PUBLIC
+            ${implot_SOURCE_DIR}
+    )
+    target_link_libraries(implot PUBLIC imgui)
+endif ()
 
 add_library(gr-digitizers-options INTERFACE)
 include(cmake/CompilerWarnings.cmake)
@@ -97,7 +101,7 @@ if(ENABLE_PICOSCOPE)
     pkg_check_modules(libusb REQUIRED IMPORTED_TARGET libusb-1.0)
 endif()
 
-if(ENABLE_TIMING)
+if(ENABLE_TIMING AND NOT EMSCRIPTEN)
     pkg_check_modules(saftlib REQUIRED IMPORTED_TARGET saftlib)
     pkg_check_modules(etherbone REQUIRED IMPORTED_TARGET etherbone)
 endif()
