--- a/blocklib/timing/CMakeLists.txt
+++ b/blocklib/timing/CMakeLists.txt
@@ -7,10 +7,13 @@ if (NOT EMSCRIPTEN)
             ${imgui_SOURCE_DIR}/misc/fonts
             ${imgui_SOURCE_DIR}/misc/fonts/Roboto-Medium.ttf)
 
+    add_library(timing INTERFACE)
+    target_include_directories(timing INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
+
     add_executable(test-timing src/test-timing.cpp)
-    target_link_libraries(test-timing PRIVATE gr-digitizers-options PkgConfig::saftlib PkgConfig::etherbone imgui implot CLI11::CLI11 gnuradio-algorithm gnuradio-core ui_assets)
+    target_link_libraries(test-timing PRIVATE gr-digitizers-options timing PkgConfig::saftlib PkgConfig::etherbone imgui implot CLI11::CLI11 gnuradio-algorithm gnuradio-core ui_assets)
 endif ()
 
-# if (ENABLE_GR_DIGITIZERS_TESTING)
-#     add_subdirectory(test)
-# endif ()
+if (ENABLE_GR_DIGITIZERS_TESTING)
+    add_subdirectory(test)
+endif ()
