Sonar: enable coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,4 +14,4 @@ sonar.cfamily.cpp23.enabled=true
 
 # exclude benchmark which crashes the Analysis
 #sonar.exclusions=bench/bm_case1.cpp
-#sonar.coverageReportPaths=/home/runner/work/graph-prototype/build/coverage.xml
+sonar.coverageReportPaths=/home/runner/work/gr-digitizers/build/coverage.xml
