remove cli11 dependency and fall back to simulated snooping if there is no correctly set up timing hardware

--- a/blocklib/timing/CMakeLists.txt
+++ b/blocklib/timing/CMakeLists.txt
@@ -11,7 +11,7 @@ if (NOT EMSCRIPTEN)
     target_include_directories(timing INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
 
     add_executable(test-timing src/test-timing.cpp)
-    target_link_libraries(test-timing PRIVATE gr-digitizers-options timing PkgConfig::saftlib PkgConfig::etherbone imgui implot CLI11::CLI11 gnuradio-algorithm gnuradio-core ui_assets)
+    target_link_libraries(test-timing PRIVATE gr-digitizers-options timing PkgConfig::saftlib PkgConfig::etherbone imgui implot gnuradio-algorithm gnuradio-core ui_assets)
 endif ()
 
 if (ENABLE_GR_DIGITIZERS_TESTING)
