--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,26 +86,52 @@ jobs:
         if: matrix.configurations.compiler == 'gcc13' && matrix.cmake-build-type == 'Debug'
         uses: SonarSource/sonarcloud-github-c-cpp@v2
 
+      - name: "Install timing system dependencies: etherbone"
+        if: matrix.configurations.compiler != 'emscripten'
+        shell: bash
+        run: |
+          git clone --branch v2.1.3 --depth=1 https://ohwr.org/project/etherbone-core.git
+          cd etherbone-core/api
+          touch ChangeLog # add an empty changelog file which is required by autotools
+          sed -e "s%AC_MSG_ERROR%AC_MSG_NOTICE%g" -i configure.ac
+          autoreconf -i
+          ./configure
+          make -j
+          sudo make install
+
+      - name: "Install timing system dependencies: saftlib"
+        if: matrix.configurations.compiler != 'emscripten'
+        shell: bash
+        run: |
+          sudo apt-get -y install libsigc++-2.0-dev libxslt1-dev libboost-all-dev
+          git clone --branch v3.0.3 --depth=1 https://github.com/GSI-CS-CO/saftlib.git
+          cd saftlib
+          ./autogen.sh
+          ./configure
+          make
+          sudo make install
+
       - name: Install picoscope libraries
+        if: matrix.configurations.compiler != 'emscripten'
         run: |
           # https://www.picotech.com/downloads/linux
           wget -O - https://labs.picotech.com/Release.gpg.key|sudo apt-key add -
           sudo add-apt-repository 'deb https://labs.picotech.com/rc/picoscope7/debian/ picoscope main'
           sudo apt update
-          sudo apt install -y udev libusb-1.0-0-dev libps3000a libps4000a libps5000a libps6000 libps6000a || true # ignore udev errors in post install because of udev in container
+          sudo apt install -y udev libusb-1.0-0-dev libps3000a libps4000a libps5000a libps6000 libps6000a libx11-dev libgl1-mesa-dev libsdl2-dev || true # ignore udev errors in post install because of udev in container
 
       - name: Configure CMake
         if: matrix.configurations.compiler != 'emscripten'
         shell: bash
         run: |
-          cmake -S . -B ../build -DCMAKE_BUILD_TYPE=${{ matrix.cmake-build-type }} -DENABLE_COVERAGE=${{ matrix.configurations.compiler == 'gcc13' &&  matrix.cmake-build-type == 'Debug'}}
+          cmake -S . -B ../build -DENABLE_PICOSCOPE=TRUE -DENABLE_TIMING=TRUE -DCMAKE_BUILD_TYPE=${{ matrix.cmake-build-type }} -DENABLE_COVERAGE=${{ matrix.configurations.compiler == 'gcc13' &&  matrix.cmake-build-type == 'Debug'}}
 
       - name: Configure CMake Emscripten
         if: matrix.configurations.compiler == 'emscripten'
         shell: bash
         run: |
           source ~/emsdk/emsdk_env.sh
-          emcmake cmake -S . -B ../build -DCMAKE_BUILD_TYPE=${{ matrix.cmake-build-type }} -DENABLE_COVERAGE=OFF
+          emcmake cmake -S . -B ../build -DENABLE_PICOSCOPE=FALSE -DENABLE_TIMING=FALSE -DCMAKE_BUILD_TYPE=${{ matrix.cmake-build-type }} -DENABLE_COVERAGE=OFF
 
       - name: Build
         if: matrix.configurations.compiler != 'gcc13' || matrix.cmake-build-type != 'Debug'
