--- a/blocklib/timing/CMakeLists.txt
+++ b/blocklib/timing/CMakeLists.txt
@@ -1,4 +1,4 @@
-if (NOT EMSCRIPTEN)
+if (NOT EMSCRIPTEN AND NOT CLANG)
     add_library(timing INTERFACE)
     target_include_directories(timing INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
 
