--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,9 +78,9 @@ jobs:
           git clone --depth=1 https://github.com/emscripten-core/emsdk.git
           cd emsdk
           # Download and install the latest SDK tools.
-          ./emsdk install releases-bf3c159888633d232c0507f4c76cc156a43c32dc-64bit
+          ./emsdk install 3.1.44
           # Make the "latest" SDK "active" for the current user. (writes .emscripten file)
-          ./emsdk activate releases-bf3c159888633d232c0507f4c76cc156a43c32dc-64bit
+          ./emsdk activate 3.1.44
 
       - name: Install sonar-scanner and build-wrapper
         if: matrix.configurations.compiler == 'gcc13' && matrix.cmake-build-type == 'Debug'
