CI: switch to using the gnuradio4 docker image
gr-digitizers specific dependencies are still installed in the CI
workflow for now to not have to deal with keeping multiple docker image
layers up to date consistently.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,4 +14,5 @@ sonar.cfamily.cpp23.enabled=true
 
 # exclude benchmark which crashes the Analysis
 #sonar.exclusions=bench/bm_case1.cpp
-sonar.coverageReportPaths=/home/runner/work/gr-digitizers/build/coverage.xml
+sonar.coverageReportPaths=../build/coverage.xml
+sonar.cfamily.compile-commands=../build/compile_commands.json
